--- a/index.html
+++ b/index.html
@@ -2908,122 +2908,216 @@ outline: none;
 
 <div class="p50c11Container" id="merchandise">
   <div class="p50c11Title">
-    <h2 data-aos="fade-up" data-aos-anchor-placement="top-bottom"><b>Merchandise</b></h2>
+    <h2 data-aos="fade-up" data-aos-anchor-placement="top-bottom"><b>Our Customer</b></h2>
   </div>
   <div class="p50c11ContainerInner" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide" style="background-image: url(assets/img/p50-c10-img01.webp);">
-          <a href="https://www.setel.com/PETRONAS-Shop/product/p50-tumbler-white-green" target="_blank" class="p50c11ContentLink"></a>
+        <div class="swiper-slide" style="background-image: url(images/lavalette.png);">
           <div class="p50c11Content">
-            <p>P50 Tumbler - White/Green</p>
-            <a href="https://www.setel.com/PETRONAS-Shop/product/p50-tumbler-white-green" class="p50generalBtn" target="_blank">
-              <i></i>
-              <p>Buy now</p>
-            </a>
+            <p>Rumah Sakit Lavalette</p>
+          </div> 
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUKARSAHUSADA.png);">
+          <div class="p50c11Content">
+            <p>RSU Karsa Husada Batu</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(assets/img/p50-c10-img09.webp);">
-          <a href="https://www.setel.com/PETRONAS-Shop/product/p50-tumbler-black-green" target="_blank" class="p50c11ContentLink"></a>
+        <div class="swiper-slide" style="background-image: url(images/Mandau\ Cipta\ Tenaga\ Nusatara.png);">
           <div class="p50c11Content">
-            <p>P50 Tumbler - Black/Green</p>
-            <a href="https://www.setel.com/PETRONAS-Shop/product/p50-tumbler-black-green" class="p50generalBtn" target="_blank">
-              <i></i>
-              <p>Buy now</p>
-            </a>
+            <p>PT Mandau Cipta Tenaga Nusantara</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(assets/img/p50-c10-img02.webp);">
-          <a href="https://www.setel.com/PETRONAS-Shop/product/p50-men-utility-golf-polo-green-white" target="_blank" class="p50c11ContentLink"></a>
+        <div class="swiper-slide" style="background-image: url(images/RSUDAWS.png);">
           <div class="p50c11Content">
-            <p>P50 Men Utility Golf Polo - Green/White</p>
-            <a href="https://www.setel.com/PETRONAS-Shop/product/p50-men-utility-golf-polo-green-white" class="p50generalBtn" target="_blank">
-              <i></i>
-              <p>Buy now</p>
-            </a>
+            <p>RSUD Abdoel Wahab Sjahranie Samarinda</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(assets/img/p50-c10-img03.webp);">
-          <a href="https://www.setel.com/PETRONAS-Shop/product/p50-unisex-basic-signature-tee-black" target="_blank" class="p50c11ContentLink"></a>
+        <div class="swiper-slide" style="background-image: url(images/mhj.png);">
           <div class="p50c11Content">
-            <p>P50 Unisex Basic Signature Tee - Black</p>
-            <a href="https://www.setel.com/PETRONAS-Shop/product/p50-unisex-basic-signature-tee-black" class="p50generalBtn" target="_blank">
-              <i></i>
-              <p>Buy now</p>
-            </a>
+            <p>PT Mulya Husada Jaya</p>   
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(assets/img/p50-c10-img04.webp);">
-          <a href="https://www.setel.com/PETRONAS-Shop/product/p50-unisex-basic-signature-tee-white" target="_blank" class="p50c11ContentLink"></a>
+        <div class="swiper-slide" style="background-image: url(images/Mitrakeluarga.png);">
           <div class="p50c11Content">
-            <p>P50 Unisex Basic Signature Tee - White</p>
-            <a href="https://www.setel.com/PETRONAS-Shop/product/p50-unisex-basic-signature-tee-white" class="p50generalBtn" target="_blank">
-              <i></i>
-              <p>Buy now</p>
-            </a>
+            <p>Mitra Keluarga</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(assets/img/p50-c10-img05.webp);">
-          <a href="https://www.setel.com/PETRONAS-Shop/product/p50-infinity-t-shirt-black" target="_blank" class="p50c11ContentLink"></a>
+        <div class="swiper-slide" style="background-image: url(images/RSUDSRENGAT.png);">
           <div class="p50c11Content">
-            <p>P50 Infinity T-Shirt Black</p>
-            <a href="https://www.setel.com/PETRONAS-Shop/product/p50-infinity-t-shirt-black" class="p50generalBtn" target="_blank">
-              <i></i>
-              <p>Buy now</p>
-            </a>
+            <p>RSUD Srengat</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(assets/img/p50-c10-img06.webp);">
-          <a href="https://www.setel.com/PETRONAS-Shop/product/p50-infinity-t-shirt-white" target="_blank" class="p50c11ContentLink"></a>
+        <div class="swiper-slide" style="background-image: url(images/rsudkebayoran.png);">
           <div class="p50c11Content">
-            <p>P50 Infinity T-Shirt White</p>
-            <a href="https://www.setel.com/PETRONAS-Shop/product/p50-infinity-t-shirt-white" class="p50generalBtn" target="_blank">
-              <i></i>
-              <p>Buy now</p>
-            </a>
+          <p>RSUD Daerah Kebayoran</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(assets/img/p50-c10-img07.webp);">
-          <a href="https://www.setel.com/PETRONAS-Shop/product/p50-unisex-utility-gorun-jersey-green" target="_blank" class="p50c11ContentLink"></a>
+        <div class="swiper-slide" style="background-image: url(images/RSUDLAHAT.png);">
           <div class="p50c11Content">
-            <p>P50 Unisex Utility Gorun Jersey Green</p>
-            <a href="https://www.setel.com/PETRONAS-Shop/product/p50-unisex-utility-gorun-jersey-green" class="p50generalBtn" target="_blank">
-              <i></i>
-              <p>Buy now</p>
-            </a>
+            <p>RSUD Lahat</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(assets/img/p50-c10-img08.webp);">
-          <a href="https://www.setel.com/PETRONAS-Shop/product/p50-cap-white" target="_blank" class="p50c11ContentLink"></a>
+        <div class="swiper-slide" style="background-image: url(images/RS\ Umum\ Palmatak.png);">
           <div class="p50c11Content">
-            <p>P50 Cap - White</p>
-            <a href="https://www.setel.com/PETRONAS-Shop/product/p50-cap-white" class="p50generalBtn" target="_blank">
-              <i></i>
-              <p>Buy now</p>
-            </a>
+            <p>RS Umum Palmatak</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(assets/img/p50-c10-img10.webp);">
-          <a href="https://www.setel.com/PETRONAS-Shop/product/p50-luxe-cap-green-oe00vtg" target="_blank" class="p50c11ContentLink"></a>
+        <div class="swiper-slide" style="background-image: url(images/PT\ Mandiri\ Pratama\ Cemerlang.png);">
           <div class="p50c11Content">
-            <p>P50 Luxe Cap Green</p>
-            <a href="https://www.setel.com/PETRONAS-Shop/product/p50-luxe-cap-green-oe00vtg" class="p50generalBtn" target="_blank">
-              <i></i>
-              <p>Buy now</p>
-            </a>
+            <p>PT Mandiri Pratama Cemerlang</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(assets/img/p50-c10-img11.webp);">
-          <a href="https://www.setel.com/PETRONAS-Shop/product/mercedes-amg-petronas-2024-team-petronas-cap-green" target="_blank" class="p50c11ContentLink"></a>
+        <div class="swiper-slide" style="background-image: url(images/Parson.png);">
           <div class="p50c11Content">
-            <p>Mercedes-AMG PETRONAS 2024 Team PETRONAS Cap - Green</p>
-            <a href="https://www.setel.com/PETRONAS-Shop/product/mercedes-amg-petronas-2024-team-petronas-cap-green" class="p50generalBtn" target="_blank">
-              <i></i>
-              <p>Buy now</p>
-            </a>
+            <p>PT Sinar Acemo Engineering</p>
           </div>
         </div>
-        
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Gresik\ Sehati.png);">
+          <div class="p50c11Content">
+            <p>RSUD Gresik Sehati</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/rsud\ tarakan.png);">
+          <div class="p50c11Content">
+            <p>RSUD Tarakan</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RS\ DR.png);">
+          <div class="p50c11Content">
+            <p>RS Dr.Soepraoen</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/univ\ setia\ budi.png);">
+          <div class="p50c11Content">
+            <p>Universitas Setia Budi</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Banyumas\ Cemerlang.png);">
+          <div class="p50c11Content">
+            <p>RSUD Banyumas Cemerlang</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Sengayam.png);">
+          <div class="p50c11Content">
+            <p>RSUD Sengayam>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/yayasan\ indah.png);">
+          <div class="p50c11Content">
+            <p>Yayasan Indah Banjarmasin Sari Mulia</p>
+          </div>
+        </div>
+                <div class="swiper-slide" style="background-image: url(images/opm.png);">
+          <div class="p50c11Content">
+            <p>OPM</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Dr.H.Koesnadi\ Bondowoso.png);">
+          <div class="p50c11Content">
+            <p>RSUD Dr.H.Koesnadi Bondowoso</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/rsudNSOE.png);">
+          <div class="p50c11Content">
+            <p>RSUD Soe</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/rsud\ palembang\ bari.png);">
+          <div class="p50c11Content">
+            <p>RSUD Palembang Bari</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ FAKFAK.png);">
+          <div class="p50c11Content">
+            <p>RSUD Kabupaten Fakfak</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSU\ Mitra\ Delima.png);">
+          <div class="p50c11Content">
+            <p>RSU Mitra Delima</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Panglima.png);">
+          <div class="p50c11Content">
+            <p>RSUD Panglima Surabaya</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/Hon\ Cuan\ Indonesia.png);">
+          <div class="p50c11Content">
+            <p>PT Hon Chuan Indonesia</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Sawahlunto.png);">
+          <div class="p50c11Content">
+            <p>RSUD Sawahlunto</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Ratu\ Aji\ Putri\ Boting.png);">
+          <div class="p50c11Content">
+            <p>RSUD Ratu Aji Putri Botung</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Mgr.Gabriel\ Manek\,SVD.png);">
+          <div class="p50c11Content">
+            <p>RSUD Mgr.Gabriel Manek,SVD</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Genteng\ Kabupaten\ Banyuwangi.png);">
+          <div class="p50c11Content">
+            <p>RSUD Genteng Kabupaten Banyuwangi</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/PT\ Aneka\ Medika\ Indonesia.png);">
+          <div class="p50c11Content">
+            <p>PT Aneka Medika Indonesia</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Dr.\ Soegiri.png);">
+          <div class="p50c11Content">
+            <p>RSUD Dr. Soegiri</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/Fakultas\ Keperawanan\ Universitas\ Syiah\ Kuala.png);">
+          <div class="p50c11Content">
+            <p>Fakultas Keperawanan Universitas Syiah Kuala</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Bangil.png);">
+          <div class="p50c11Content">
+            <p>RSUD Bangil/p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/POLTEKKES\ KEMENKES\ BENGKULU.png);">
+          <div class="p50c11Content">
+            <p>POLTEKKES KEMENKES BENGKULU</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/Internusa\ Dua\ Medika.png);">
+          <div class="p50c11Content">
+            <p>Internusa Dua Medika</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Tuan\ Rondahaim\ Kabupaten\ Simalungun.png);">
+          <div class="p50c11Content">
+            <p>RSUD Tuan Rondahaim Kabupaten Simalungun</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/RSUD\ Sanglah\ Denpasar.png);">
+          <div class="p50c11Content">
+            <p>RSUD Sanglah Denpasar</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/CV.\ Onix\ Stationery\ Ideal.png);">
+          <div class="p50c11Content">
+            <p>CV. Onix Stationery Ideal</p>
+          </div>
+        </div>
+        <div class="swiper-slide" style="background-image: url(images/PT.\ Berkah\ Lintas\ Kencana.png);">
+          <div class="p50c11Content">
+            <p>PT. Berkah Lintas Kencana</p>
+          </div>
+        </div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
@@ -3033,7 +3127,7 @@ outline: none;
 
 <div class="p50cFooterContainer">
   <div class="p50cFooterPanel">
-    <img src="assets/img/p50-footer-bg.png" style="display: none;"/>
+    <img src="images/logo.png" style="display: none;"/>
     <div class="p50cFooterContainerInner">
         <div class="p50cFooterTitle">
             <img src="assets/img/petronas-50-logo.png" data-aos="fade-up" data-aos-anchor-placement="top-bottom"/>
