--- a/index.html
+++ b/index.html
@@ -2913,17 +2913,17 @@ outline: none;
   <div class="p50c11ContainerInner" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide" style="background-image: url(img/lavalette.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/lavalette.png);">  
           <div class="p50c11Content">
             <p>Rumah Sakit Lavalette</p>
           </div> 
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUKARSAHUSADA.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUKARSAHUSADA.png);">
           <div class="p50c11Content">
             <p>RSU Karsa Husada Batu</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/Mandau\ Cipta\ Tenaga\ Nusatara.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/Mandau Cipta Tenaga Nusatara.png);">
           <div class="p50c11Content">
             <p>PT Mandau Cipta Tenaga Nusantara</p>
           </div>
