--- a/index.html
+++ b/index.html
@@ -2928,12 +2928,12 @@ outline: none;
             <p>PT Mandau Cipta Tenaga Nusantara</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUDAWS.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUDAWS.png);">
           <div class="p50c11Content">
             <p>RSUD Abdoel Wahab Sjahranie Samarinda</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/mhj.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img//mhj.png);">
           <div class="p50c11Content">
             <p>PT Mulya Husada Jaya</p>   
           </div>
@@ -2943,177 +2943,177 @@ outline: none;
             <p>Mitra Keluarga</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUDSRENGAT.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUDSRENGAT.png);">
           <div class="p50c11Content">
             <p>RSUD Srengat</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/rsudkebayoran.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/rsudkebayoran.png);">
           <div class="p50c11Content">
           <p>RSUD Daerah Kebayoran</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUDLAHAT.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUDLAHAT.png);">
           <div class="p50c11Content">
             <p>RSUD Lahat</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RS\ Umum\ Palmatak.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RS\ Umum\ Palmatak.png);">
           <div class="p50c11Content">
             <p>RS Umum Palmatak</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/PT\ Mandiri\ Pratama\ Cemerlang.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/PT\ Mandiri\ Pratama\ Cemerlang.png);">
           <div class="p50c11Content">
             <p>PT Mandiri Pratama Cemerlang</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/Parson.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/Parson.png);">
           <div class="p50c11Content">
             <p>PT Sinar Acemo Engineering</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Gresik\ Sehati.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Gresik\ Sehati.png);">
           <div class="p50c11Content">
             <p>RSUD Gresik Sehati</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/rsud\ tarakan.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/rsud\ tarakan.png);">
           <div class="p50c11Content">
             <p>RSUD Tarakan</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RS\ DR.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RS\ DR.png);">
           <div class="p50c11Content">
             <p>RS Dr.Soepraoen</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/univ\ setia\ budi.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/univ\ setia\ budi.png);">
           <div class="p50c11Content">
             <p>Universitas Setia Budi</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Banyumas\ Cemerlang.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Banyumas\ Cemerlang.png);">
           <div class="p50c11Content">
             <p>RSUD Banyumas Cemerlang</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Sengayam.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Sengayam.png);">
           <div class="p50c11Content">
             <p>RSUD Sengayam>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/yayasan\ indah.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/yayasan\ indah.png);">
           <div class="p50c11Content">
             <p>Yayasan Indah Banjarmasin Sari Mulia</p>
           </div>
         </div>
-                <div class="swiper-slide" style="background-image: url(img/opm.png);">
+                <div class="swiper-slide" style="background-image: url(assets/img/opm.png);">
           <div class="p50c11Content">
             <p>OPM</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Dr.H.Koesnadi\ Bondowoso.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Dr.H.Koesnadi\ Bondowoso.png);">
           <div class="p50c11Content">
             <p>RSUD Dr.H.Koesnadi Bondowoso</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/rsudNSOE.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/rsudNSOE.png);">
           <div class="p50c11Content">
             <p>RSUD Soe</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/rsud\ palembang\ bari.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/rsud\ palembang\ bari.png);">
           <div class="p50c11Content">
             <p>RSUD Palembang Bari</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ FAKFAK.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ FAKFAK.png);">
           <div class="p50c11Content">
             <p>RSUD Kabupaten Fakfak</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSU\ Mitra\ Delima.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSU\ Mitra\ Delima.png);">
           <div class="p50c11Content">
             <p>RSU Mitra Delima</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Panglima.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Panglima.png);">
           <div class="p50c11Content">
             <p>RSUD Panglima Surabaya</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/Hon\ Cuan\ Indonesia.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/Hon\ Cuan\ Indonesia.png);">
           <div class="p50c11Content">
             <p>PT Hon Chuan Indonesia</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Sawahlunto.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Sawahlunto.png);">
           <div class="p50c11Content">
             <p>RSUD Sawahlunto</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Ratu\ Aji\ Putri\ Boting.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Ratu\ Aji\ Putri\ Boting.png);">
           <div class="p50c11Content">
             <p>RSUD Ratu Aji Putri Botung</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Mgr.Gabriel\ Manek\,SVD.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Mgr.Gabriel\ Manek\,SVD.png);">
           <div class="p50c11Content">
             <p>RSUD Mgr.Gabriel Manek,SVD</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Genteng\ Kabupaten\ Banyuwangi.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Genteng\ Kabupaten\ Banyuwangi.png);">
           <div class="p50c11Content">
             <p>RSUD Genteng Kabupaten Banyuwangi</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/PT\ Aneka\ Medika\ Indonesia.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/PT\ Aneka\ Medika\ Indonesia.png);">
           <div class="p50c11Content">
             <p>PT Aneka Medika Indonesia</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Dr.\ Soegiri.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Dr.\ Soegiri.png);">
           <div class="p50c11Content">
             <p>RSUD Dr. Soegiri</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/Fakultas\ Keperawanan\ Universitas\ Syiah\ Kuala.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/Fakultas\ Keperawanan\ Universitas\ Syiah\ Kuala.png);">
           <div class="p50c11Content">
             <p>Fakultas Keperawanan Universitas Syiah Kuala</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Bangil.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Bangil.png);">
           <div class="p50c11Content">
             <p>RSUD Bangil/p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/POLTEKKES\ KEMENKES\ BENGKULU.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/POLTEKKES\ KEMENKES\ BENGKULU.png);">
           <div class="p50c11Content">
             <p>POLTEKKES KEMENKES BENGKULU</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/Internusa\ Dua\ Medika.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/Internusa\ Dua\ Medika.png);">
           <div class="p50c11Content">
             <p>Internusa Dua Medika</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Tuan\ Rondahaim\ Kabupaten\ Simalungun.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Tuan\ Rondahaim\ Kabupaten\ Simalungun.png);">
           <div class="p50c11Content">
             <p>RSUD Tuan Rondahaim Kabupaten Simalungun</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/RSUD\ Sanglah\ Denpasar.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/RSUD\ Sanglah\ Denpasar.png);">
           <div class="p50c11Content">
             <p>RSUD Sanglah Denpasar</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/CV.\ Onix\ Stationery\ Ideal.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/CV.\ Onix\ Stationery\ Ideal.png);">
           <div class="p50c11Content">
             <p>CV. Onix Stationery Ideal</p>
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/PT.\ Berkah\ Lintas\ Kencana.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/PT.\ Berkah\ Lintas\ Kencana.png);">
           <div class="p50c11Content">
             <p>PT. Berkah Lintas Kencana</p>
           </div>
