--- a/index.html
+++ b/index.html
@@ -2938,7 +2938,7 @@ outline: none;
             <p>PT Mulya Husada Jaya</p>   
           </div>
         </div>
-        <div class="swiper-slide" style="background-image: url(img/Mitrakeluarga.png);">
+        <div class="swiper-slide" style="background-image: url(assets/img/Mitrakeluarga.png);">
           <div class="p50c11Content">
             <p>Mitra Keluarga</p>
           </div>
