--- a/index.html
+++ b/index.html
@@ -775,39 +775,19 @@ outline: none;
         </div>
       </div>
     </div>
-    <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="b-slider__slide_inner">
-        <div class="p50c4SwiperBG" style="background-image: url(assets/img/p50-c3b-img01.png);"></div>
+        <div class="p50c4SwiperBG" style="background-image: url(assets/img/ELJE\ ELS\ 31\ SERIES.png);"></div>
         <div class="p50c4SwiperInner">
-          <h3>Hanna’s Robotic Dreams Realised</h3>
-          <a href="#video01" data-yt="0pUa05fmHjU" class="p50generalBtn p50c1PlayBtn GAEventTrack"  eventname="P50_Play_Hanna" >
-            <i></i>
-            <p>Full video</p>
-          </a>
+          <h3>ELJE ELS 31 SERIES</h3>
         </div>
       </div>
     </div>
     <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="b-slider__slide_inner">
-        <div class="p50c4SwiperBG" style="background-image: url(assets/img/p50-c3b-img01.png);"></div>
+        <div class="p50c4SwiperBG" style="background-image: url(assets/img/ELJE\ ELS\ SERIES\ 1kVA-20kVA.png);"></div>
         <div class="p50c4SwiperInner">
-          <h3>Sapinah's Love Across the Sea</h3>
-          <a href="#video01" data-yt="Ou3vgpfr5PE" class="p50generalBtn p50c1PlayBtn GAEventTrack"  eventname="P50_Play_Sapinah">
-            <i></i>
-            <p>Full video</p>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-      <div class="b-slider__slide_inner">
-        <div class="p50c4SwiperBG" style="background-image: url(assets/img/p50-c3b-img01.png);"></div>
-        <div class="p50c4SwiperInner">
-          <h3>A Journey of Unity and Triumph</h3>
-          <a href="#video01" data-yt="v-GCoRDT_vo" class="p50generalBtn p50c1PlayBtn GAEventTrack"  eventname="P50_Play_Unity_Triumph">
-            <i></i>
-            <p>Full video</p>
-          </a>
+          <h3>ELJE ELS SERIES 1kVA-20kVA</h3>
         </div>
       </div>
     </div>
