--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
 
   <meta name="robots" content="noindex,nofollow">
 
-  <title>PETRONAS 50 Years</title>
+  <title>PT Gracia Pesona Semesta</title>
 
   <link rel="canonical" href="https://www.petronas.com/">
   <link rel="shortlink" href="https://www.petronas.com/">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <!-- <meta name="viewport"           content="width=700"> -->
   <meta name="keywords" content="PETRONAS Global">
-  <meta name="description" content="For 50 years, PETRONAS has long been driven by the power of solidarity, leading to remarkable feats of which would only be possible when we work together.">
+
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.petronas.com/">
   <meta property="og:image" content="https://www.petronas.com/sites/default/files/default_images/petronas-default-og.png">
   <meta property="og:title" content="PETRONAS 50 Years">
-  <meta property="og:description" content="For 50 years, PETRONAS has long been driven by the power of solidarity, leading to remarkable feats of which would only be possible when we work together.">
 
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 
