--- a/index.html
+++ b/index.html
@@ -411,25 +411,13 @@ outline: none;
       <div class="p50headerRightBtmM">
         <ul>
           <li>
-            <a href="#history">History</a>
+            <a href="#pltmh">PLTMH</a>
           </li>
           <li>
-            <a href="#social-feed">Social Feeds</a>
+            <a href="#altsgs">ALKES</a>
           </li>
           <li>
-            <a href="#merchandise">Merchandise</a>
-          </li>
-          <li>
-            <a href="#message">Message</a>
-          </li>
-          <li>
-            <a href="#dreams">PETRONAS 50 Dreams</a>
-          </li>
-          <li>
-            <a href="#torch">Passing The Torch</a>
-          </li>
-          <li>
-            <a href="#storytelling">Storytelling</a>
+            <a href="#altsgs">PLTS</a>
           </li>
           <!-- <li>
             <a href="#leader">Leaders Message</a>
